added alt text to all iamges

--- a/src/components/AboutUs/AboutUsWhy.astro
+++ b/src/components/AboutUs/AboutUsWhy.astro
@@ -6,6 +6,7 @@ const {
     aboutUsWhatDesc, 
     aboutUsWhyBtn, 
     aboutUsWhyImage,
+    aboutUsWhyAltText,
     onlineservicesText,
     customercareText,
     qualityText,
@@ -29,7 +30,7 @@ const {
         <p>{localexpertiseText}</p>
     </section>
     <div>
-        <img src={aboutUsWhyImage} alt="random alt text">
+        <img src={aboutUsWhyImage} alt={aboutUsWhyAltText}>
         <a href="#">{aboutUsWhyBtn}</a>
     </div>
 </div>
