--- a/src/components/HomePage/OnlineBased.astro
+++ b/src/components/HomePage/OnlineBased.astro
@@ -1,10 +1,10 @@
 ---
-const {onlineBasedHeader, onlineBasedImage, onlineBasedText, onlineBasedBtn} = Astro.props;
+const {onlineBasedHeader, onlineBasedImage, onlineBasedText, onlineBasedBtn, onlineBasedAltText} = Astro.props;
 ---
 
 <div>
     <h2>{onlineBasedHeader}</h2>
-    <img src={onlineBasedImage} alt="random alt text">
+    <img src={onlineBasedImage} alt={onlineBasedAltText}>
     <p>{onlineBasedText}</p>
     <a href="#">{onlineBasedBtn}</a>
 </div>
