--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -3,6 +3,7 @@ const {
     moreproductsHeader, 
     lasercutTitle, 
     lasercutImage,
+    lasercutAltText,
     highqualitylaserTitle,
     lasercutText,
     partsText,
@@ -10,6 +11,7 @@ const {
     customsizesText,
     snapsetTitle,
     snapsetImage,
+    snapsetAltText,
     durableTitle,
     multipartText,
     snapsetpartsText,
@@ -17,6 +19,7 @@ const {
     fieldserviceText,
     continuousTitle,
     continuousImage,
+    continuousAltText,
     reliableTitle,
     continuousText,
     continuouspartsText,
@@ -24,6 +27,7 @@ const {
     accountingText,
     customenvelopeTitle,
     customenvelopeImage,
+    customenvelopeAltText,
     deliverbrandfirstTitle,
     daytodayText,
     regularText,
@@ -36,7 +40,7 @@ const {
     <h2>{moreproductsHeader}</h2>
     <section>
         <h3>{lasercutTitle}</h3>
-        <img src={lasercutImage} alt="random alt text">
+        <img src={lasercutImage} alt={lasercutAltText}>
         <p>{highqualitylaserTitle}</p>
         <p>{lasercutText}</p>
         <p>{partsText}</p>
@@ -45,7 +49,7 @@ const {
     </section>
     <section>
         <h3>{snapsetTitle}</h3>
-        <img src={snapsetImage} alt="random alt text">
+        <img src={snapsetImage} alt={snapsetAltText}>
         <p>{durableTitle}</p>
         <p>{multipartText}</p>
         <p>{snapsetpartsText}</p>
@@ -54,7 +58,7 @@ const {
     </section>
     <section>
         <h3>{continuousTitle}</h3>
-        <img src={continuousImage} alt="random alt text">
+        <img src={continuousImage} alt={continuousAltText}>
         <p>{reliableTitle}</p>
         <p>{continuousText}</p>
         <p>{continuouspartsText}</p>
@@ -63,7 +67,7 @@ const {
     </section>
     <section>
         <h3>{customenvelopeTitle}</h3>
-        <img src={customenvelopeImage} alt="random alt text">
+        <img src={customenvelopeImage} alt={customenvelopeAltText}>
         <p>{deliverbrandfirstTitle}</p>
         <p>{daytodayText}</p>
         <p>{regularText}</p>
