--- a/src/components/HomePage/HighQuality.astro
+++ b/src/components/HomePage/HighQuality.astro
@@ -1,10 +1,10 @@
 ---
 
-const {highQualityHeader, highQualityImage, highQualityText } = Astro.props;
+const {highQualityHeader, highQualityImage, highQualityText, highQualityAltText } = Astro.props;
 ---
 
 <div>
     <h2>{highQualityHeader}</h2>
-    <img src={highQualityImage} alt="random alt text">
+    <img src={highQualityImage} alt={highQualityAltText}>
     <p>{highQualityText}</p>
 </div>
