--- a/src/components/HomePage/PromoProducts.astro
+++ b/src/components/HomePage/PromoProducts.astro
@@ -1,12 +1,12 @@
 ---
-const {promoProductsHeader, promoProductsImage, promoproductsText,  promoProductsBtn} = Astro.props;
+const {promoProductsHeader, promoProductsImage, promoproductsText,  promoProductsBtn, promoProductsAltText} = Astro.props;
 ---
 
 <div>
     <section>
         <h2>{promoProductsHeader}</h2>
         <p>{promoproductsText}</p>
-        <img src={promoProductsImage} alt="random alt text">
+        <img src={promoProductsImage} alt={promoProductsAltText}>
         <a href="#">{promoProductsBtn}</a>
     </section>
 </div>
