--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -4,11 +4,14 @@ const {
     pressuresealTitle, 
     pressuresealImage, 
     pressuresealBtn,
+    pressureSealAltText,
     linerlessTitle,
     linerlessImage,
+    linerlessLabelAltText,
     linerlessBtn,
     integratedformTitle,
     integratedformImage,
+    integratedFormAltText,
     integratedformBtn
     } = Astro.props;
 ---
@@ -17,17 +20,17 @@ const {
     <h2>{featureProductsHeader}</h2>
     <section>
         <h3>{pressuresealTitle}</h3>
-        <img src={pressuresealImage} alt="random alt text">
+        <img src={pressuresealImage} alt={pressureSealAltText}>
         <a href="/pressuresealenvelope">{pressuresealBtn}</a>
     </section>
     <section>
         <h3>{linerlessTitle}</h3>
-        <img src={linerlessImage} alt="random alt text">
+        <img src={linerlessImage} alt={linerlessLabelAltText}>
         <a href="/linerlesslabel">{linerlessBtn}</a>
     </section>
     <section>
         <h3>{integratedformTitle}</h3>
-        <img src={integratedformImage} alt="random alt text">
+        <img src={integratedformImage} alt={integratedFormAltText}>
         <a href="/integratedformlabel">{integratedformBtn}</a>
     </section>
 </div>
