--- a/src/pages/linerlesslabel.astro
+++ b/src/pages/linerlesslabel.astro
@@ -29,6 +29,10 @@ const { linerlessImage: {
 	url: linerlessImage
 }} = heroData;
 
+const { linerlessImage: {
+	alternativeText: linerlessAltText
+}} = heroData;
+
 //fetch linerlessWhatIs components
 
 const linerlessWhatIsData = pageData.find(pd => pd.__component === "linerlesslabelwhatis.linerlesslabel-what-is") || {};
@@ -51,6 +55,18 @@ const { linerlesslabelImage3: {
 	url: linerlesslabelImage3
 }} = linerlessWhatIsData;
 
+const { linerlesslabelImage1: {
+	alternativeText: linerlesslabelAltText1
+}} = linerlessWhatIsData;
+
+const { linerlesslabelImage2: {
+	alternativeText: linerlesslabelAltText2
+}} = linerlessWhatIsData;
+
+const { linerlesslabelImage3: {
+	alternativeText: linerlesslabelAltText3
+}} = linerlessWhatIsData;
+
 //fetch Sustainable Label components
 const sustainablelabelData = pageData.find(pd => pd.__component === "sustainablelabel.sustainable-label") || {};
 const {keyadvantagesTitle, nolinerText, continuousrollText, custombrandingText, excellentforText, sustainableBtn, sustainableTitle} = sustainablelabelData;
@@ -59,12 +75,16 @@ const { sustainableImage: {
 	url: sustainableImage
 }} = sustainablelabelData;
 
-
+const { sustainableImage: {
+	alternativeText: sustainableAltText
+}} = sustainablelabelData;
 
 ---
 
 <Layout>
-    <Hero {linerlesslabelHeader} {linerlesslabelText} {linerlessImage} />
-    <WhatIs {linerlesslabelWhatIsTitle} {linerlesslabelWhatIsDesc} {perfectforwindowText} {printedmanufactureText} {linerlesslabelImage1} {linerlesslabelImage2} {linerlesslabelImage3} />
-    <SustainableLabel {keyadvantagesTitle} {nolinerText} {continuousrollText} {custombrandingText} {excellentforText} {sustainableTitle} {sustainableBtn} {sustainableImage} />
+    <Hero {linerlesslabelHeader} {linerlesslabelText} {linerlessImage} {linerlessAltText} />
+    <WhatIs {linerlesslabelWhatIsTitle} {linerlesslabelWhatIsDesc} {perfectforwindowText} {printedmanufactureText} 
+    {linerlesslabelImage1} {linerlesslabelImage2} {linerlesslabelImage3}
+    {linerlesslabelAltText1} {linerlesslabelAltText2} {linerlesslabelAltText3}/>
+    <SustainableLabel {keyadvantagesTitle} {nolinerText} {continuousrollText} {custombrandingText} {excellentforText} {sustainableTitle} {sustainableBtn} {sustainableImage} {sustainableAltText} />
 </Layout>
