--- a/src/pages/pressuresealenvelope.astro
+++ b/src/pages/pressuresealenvelope.astro
@@ -30,6 +30,10 @@ const { pressuresealImage: {
 	url: pressuresealImage
 }} = heroData;
 
+const { pressuresealImage: {
+	alternativeText: pressuresealAltText
+}} = heroData;
+
 //fetch pressuresealWhatIs components
 
 const pressuresealWhatIsData = pageData.find(pd => pd.__component === "pressuresealwhatis.pressureseal-what-is") || {};
@@ -51,6 +55,19 @@ const { pressuresealImage3: {
 	url: pressuresealImage3
 }} = pressuresealWhatIsData;
 
+const { pressuresealImage1: {
+	alternativeText: pressuresealAltText1
+}} = pressuresealWhatIsData;
+
+const { pressuresealImage2: {
+	alternativeText: pressuresealAltText2
+}} = pressuresealWhatIsData;
+
+const { pressuresealImage3: {
+	alternativeText: pressuresealAltText3
+}} = pressuresealWhatIsData;
+
+
 
 //fetch Secure Fold components
 const securefoldData = pageData.find(pd => pd.__component === "securefold.secure-fold") || {};
@@ -69,12 +86,15 @@ const { securefoldImage: {
 	url: securefoldImage
 }} = securefoldData;
 
-
+const { securefoldImage: {
+	alternativeText: securefoldAltText
+}} = securefoldData;
 
 ---
 
 <Layout>
-    <Hero {pressuresealHeader} {pressuresealDesc} {pressuresealImage} />
-    <WhatIs {pressuresealWhatIsTitle} {pressuresealWhatIsDesc} {sealedbypressureText} {pressuresealImage1} {pressuresealImage2} {pressuresealImage3} />
-    <SecureFold {idealforText} {payroll} {taxforms} {statements} {utilitybills} {directmail} {securefoldBtn} {securefoldTitle} {securefoldImage}/>
+    <Hero {pressuresealHeader} {pressuresealDesc} {pressuresealImage} {pressuresealAltText} />
+    <WhatIs {pressuresealWhatIsTitle} {pressuresealWhatIsDesc} {sealedbypressureText} {pressuresealImage1} {pressuresealImage2} {pressuresealImage3}
+    {pressuresealAltText1} {pressuresealAltText2} {pressuresealAltText3}/>
+    <SecureFold {idealforText} {payroll} {taxforms} {statements} {utilitybills} {directmail} {securefoldBtn} {securefoldTitle} {securefoldImage} {securefoldAltText}/>
 </Layout>
