--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -28,6 +28,11 @@ const { serviceHeroImage: {
 	url: serviceHeroImage
 }} = heroData;
 
+const { serviceHeroImage: {
+	alternativeText: servicesAltText
+}} = heroData;
+
+
 //fetch servicesTypes components
 
 const servicesTypesData = pageData.find(pd => pd.__component === "servicestype.services-type") || {};
@@ -53,12 +58,24 @@ const { serviceWarehouseImage: {
 	url: serviceWarehouseImage
 }} = servicesTypesData;
 
+const { servicePortalImage: {
+	alternativeText: servicePortalAltText
+}} = servicesTypesData;
+
+const { servicePoofingImage: {
+	alternativeText: servicePoofingAltText
+}} = servicesTypesData;
+
+const { serviceWarehouseImage: {
+	alternativeText: serviceWarehouseAltText
+}} = servicesTypesData;
 
 ---
 
 <Layout>
-    <Hero {serviceHeroHeader} {serviceHeroDesc} {serviceHeroBtn} {serviceHeroImage}/>
+    <Hero {serviceHeroHeader} {serviceHeroDesc} {serviceHeroBtn} {serviceHeroImage} {servicesAltText}/>
     <ServicesTypes {servicePortalTitle} {servicePortalDesc} {servicePortalImage}
     {servicePoofingTitle} {servicePoofingDesc} {servicePoofingImage}
-    {serviceWarehouseTitle} {serviceWarehouseDesc} {serviceWarehouseImage} />
+    {serviceWarehouseTitle} {serviceWarehouseDesc} {serviceWarehouseImage}
+    {servicePortalAltText} {servicePoofingAltText} {serviceWarehouseAltText}/>
 </Layout>
