Added links to top nav and colour palette

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -4,7 +4,9 @@
 ---
 
 <footer>
+  <!-- Add logo -->
     <a href="#">Print ED</a>
+    <!-- add svg icons for phone and email -->
     <p>123-456-7890</p>
     <p>abdc@gmail.com</p>
     <a href="#">Request Quote</a>
