--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -1,9 +1,15 @@
 ---
-
+import "../styles/_header.scss"
 ---
 <header>
-  <p>780-906-9959 | info@printedonline.ca</p>
+  <div class="top-nav">
+    <a href="tel:780-906-9959">780-906-9959</a>
+    <span>|</span>
+    <a href="mailto:info@printedonline.ca">info@printedonline.ca</a>
+  </div>
   <nav>
+    <!-- Add logo -->
+    <!-- Add hamburger svg -->
     <a href="/" >Print ED</a>
     <ul>
       <li><a href="/products">Our Products</a></li>
@@ -14,3 +20,5 @@
     </ul>
   </nav>
 </header>
+
+<!-- JS here -->
