Added Google Fonts and some nav styling

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,4 +3,13 @@
 .top-nav {
     display: flex;
     gap: .5rem;
+    background-color: $primary-blue;
+
+    a {
+        text-decoration: none;
+        color: $white;
+    }
+    span {
+        color: $white;
+    }
 }
