--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -9,4 +9,10 @@ const { title, description } = Astro.props;
   <meta name="generator" content={Astro.generator} />
   <meta name="description" content={description} />
   <title>{title}</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Hepta+Slab:wght@1..900&display=swap"
+    rel="stylesheet"
+  />
 </head>
