--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Head from "./Head.astro";
 import Nav from "./Nav.astro";
 import Footer from "./Footer.astro";
 const {title = "Printed", description = "Welcome to Printed!"} = Astro.props;
+import "../styles/styles.scss";
 ---
 <html>
     <Head {title} {description} />
