Mobile nav styling and functionality added.

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -42,7 +42,7 @@ import "../styles/styles.scss";
         <li><a href="/contact-us">Contact Us</a></li>
         <li><a href="/about">About Us</a></li>
       </ul>
-      <a href="/request-quote">Request Quote</a>
+      <a href="/request-quote" class="request">Request Quote</a>
     </nav>
   </div>
 </header>
