--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -106,6 +106,9 @@ header .nav-container {
   flex-wrap: wrap;
   padding: 6px 1rem 6px 1rem;
 }
+header .nav-container img {
+  width: 75%;
+}
 header .nav-container svg {
   width: 50px;
 }
@@ -114,7 +117,8 @@ header nav {
   background-color: #FFFFFF;
   position: absolute;
   top: 100%;
-  width: 100%;
+  right: 0;
+  width: 67%;
   z-index: 10;
   border: 1px solid #939393;
   border-radius: 12px 0 0 12px;
@@ -125,15 +129,31 @@ header nav ul {
 }
 header nav ul li {
   border-bottom: 1px solid #939393;
-  padding: 13px 0 13px 1rem;
 }
-header nav a {
+header nav ul li a {
+  padding: 13px 0 13px 1rem;
   text-decoration: none;
   text-transform: uppercase;
   display: block;
   font-size: 20px;
   font-weight: 600;
   color: #000;
+}
+header nav ul li a:hover,
+header nav ul li a:active {
+  background-color: #F7CE41;
+}
+header nav .request {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #124D80;
+  background-color: #F7CE41;
+  padding: 1rem;
+  border-radius: 6px;
+  margin: 1rem;
 }
 header .show-nav {
   display: unset;
@@ -148,6 +168,41 @@ header ul {
 }
 
 main {
-  position: relative;
-  margin-top: 167px;
+  margin-top: 137.25px;
+}
+
+@media (min-width: 1150px) {
+  header {
+    position: unset;
+  }
+  header .nav-container {
+    flex-wrap: unset;
+  }
+  header .nav-container button {
+    display: none;
+  }
+  header nav {
+    position: unset;
+    display: flex;
+    width: unset;
+    border: unset;
+    align-items: center;
+    justify-content: space-between;
+  }
+  header nav ul {
+    display: flex;
+    gap: 1rem;
+  }
+  header nav ul li {
+    border-bottom: none;
+  }
+  header nav ul li a {
+    padding: unset;
+  }
+  header .show-nav {
+    position: unset;
+  }
+  main {
+    margin-top: unset;
+  }
 }/*# sourceMappingURL=styles.css.map */
