--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -74,19 +74,6 @@ header {
                 }
             }
         }
-
-        .request {
-            display: inline-block;
-            font-weight: bold;
-            font-size: 20px;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: $button-blue;
-            background-color: $secondary-yellow;
-            padding: 1rem;
-            border-radius: 6px;
-            margin: 1rem;
-        }
     }
 
     .show-nav {
@@ -108,14 +95,33 @@ main {
     margin-top: 137.25px;
 }
 
-@media (min-width: 1150px) {
+@media (min-width: 320px) {
+    .request {
+        display: none;
+    }
+}
+
+@media (min-width: 1000px) {
     header {
         position: unset;
 
         .nav-container {
             flex-wrap: unset;
+
             button {
                 display: none;
+            }
+
+            .request {
+                display: inline-block;
+                font-weight: bold;
+                font-size: 20px;
+                text-decoration: none;
+                text-transform: uppercase;
+                color: $button-blue;
+                background-color: $secondary-yellow;
+                padding: 1rem;
+                border-radius: 6px;
             }
         }
 
@@ -129,13 +135,18 @@ main {
 
             ul {
                 display: flex;
-                gap: 1rem;
+                gap: 87px;
 
                 li {
                     border-bottom: none;
 
                     a {
+                        display: inline-block;
                         padding: unset;
+                    }
+
+                    a:hover {
+                        padding: 1rem;
                     }
                 }
             }
@@ -145,6 +156,7 @@ main {
             position: unset;
         }
     }
+
     main {
         margin-top: unset;
     }
