--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -143,18 +143,6 @@ header nav ul li a:hover,
 header nav ul li a:active {
   background-color: #F7CE41;
 }
-header nav .request {
-  display: inline-block;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #124D80;
-  background-color: #F7CE41;
-  padding: 1rem;
-  border-radius: 6px;
-  margin: 1rem;
-}
 header .show-nav {
   display: unset;
 }
@@ -171,7 +159,12 @@ main {
   margin-top: 137.25px;
 }
 
-@media (min-width: 1150px) {
+@media (min-width: 320px) {
+  .request {
+    display: none;
+  }
+}
+@media (min-width: 1000px) {
   header {
     position: unset;
   }
@@ -180,6 +173,17 @@ main {
   }
   header .nav-container button {
     display: none;
+  }
+  header .nav-container .request {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #124D80;
+    background-color: #F7CE41;
+    padding: 1rem;
+    border-radius: 6px;
   }
   header nav {
     position: unset;
@@ -191,13 +195,17 @@ main {
   }
   header nav ul {
     display: flex;
-    gap: 1rem;
+    gap: 87px;
   }
   header nav ul li {
     border-bottom: none;
   }
   header nav ul li a {
+    display: inline-block;
     padding: unset;
+  }
+  header nav ul li a:hover {
+    padding: 1rem;
   }
   header .show-nav {
     position: unset;
